@@ -1,3 +1,8 @@
+Thu Sep 19 16:55:45 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/syntax.rb : Fix incomplete expression-constancy check
+	  under the constraits of ISO C99 standard.
+
 Fri Sep 13 16:51:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* release.rc : 3.2.3
